fix(core): implement reorder() across 12 Potential subclasses
  StrategicTablePotential.reorder(List<Variable>): add null-guard for
  strategyTrees to avoid NPE when the array has not been initialised.

  StrategicTablePotential.reorder(Variable, State[]): new override that
  rearranges strategyTrees[] in sync with values[]. The inherited
  TablePotential version only touched values[], silently discarding all
  strategy information when a variable's states were reordered.

  DeltaPotential.reorder(Variable, State[]): find the new position of the
  stored State reference in newOrder and return a copy with the updated
  stateIndex. Previously the stub returned null, leaving the stateIndex
  pointing to the wrong state after a reorder operation.

  DeltaPotential.reorder(List<Variable>): return a copy preserving the
  delta state/value under the new variable order.

  Nine order-invariant potentials (Uniform, Binomial, CycleLength,
  SameAsPrevious, Product, Sum, Function, LinearCombination, Exponential,
  WeibullHazard): replace null stubs with return copy(). Their semantics
  do not depend on variable or state ordering, so a copy of self is
  correct. Returning null caused VariableStateOperations to silently skip
  the potential update, which is confusing and incorrect for the node's
  state.

  Adds StrategicTablePotentialTest (7 tests) covering both reorder()
  variants with and without strategyTrees initialised.

  Part of issue #449.