@@ -76,7 +76,7 @@ import java.util.List;
     public static boolean validate(Node node, List<Variable> variables, PotentialRole role) {
         boolean suitable = (
                 role == PotentialRole.CONDITIONAL_PROBABILITY || role == PotentialRole.POLICY
-        ) && variables.get(0).getVariableType() == VariableType.NUMERIC;
+        ) && variables.getFirst().getVariableType() == VariableType.NUMERIC;
         
         return suitable || (role == PotentialRole.UNSPECIFIED && node.isSuperValueNode());
     }
@@ -121,11 +121,7 @@ import java.util.List;
         variables.remove(variable);
         return this;
     }
-    
-    @Override public boolean isUncertain() {
-        return false;
-    }
-    
+
     @Override public void scalePotential(double scale) {
     
     }
@@ -134,16 +130,16 @@ import java.util.List;
         return super.deepCopy(copyNet);
     }
     
+    /** Structural potential with no state-indexed data; returns a copy. */
     @Override
     public Potential reorder(List<Variable> newOrderOfVariables) {
-        // TODO Auto-generated method stub
-        return null;
+        return copy();
     }
-    
+
+    /** Structural potential with no state-indexed data; returns a copy. */
     @Override
     public Potential reorder(Variable variable, State[] newOrder) {
-        // TODO Auto-generated method stub
-        return null;
+        return copy();
     }
 }
 
